# busy-beaver

./: .gitignore  readme.md
.cargo/: config.toml
crates/busy_beaver/: Cargo.toml
crates/busy_beaver/src/: decider.rs  format.rs  lib.rs  normalize.rs  run.rs  states.rs
crates/seed/: Cargo.toml  readme.md
crates/seed/src/: enumerate.rs  main.rs
