[package]
name = "seed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
bincode = "1.3"
busy_beaver = { path = "../busy_beaver" }
crossbeam-queue = "0.3"
ctrlc = { version = "3.4", features = ["termination"] }
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rayon = "1.7"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
